fix: text overflow for PostCard

--- a/app/components/Cards/PostCard/styles.module.css
+++ b/app/components/Cards/PostCard/styles.module.css
@@ -23,12 +23,36 @@
 .postCardContent p {
   background-color: var(--white);
   font-size: 16px;
-  padding: var(--size-xxs);
+  width: 100%;
+}
+
+.postCardContent p {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  min-height: 54px;
 }
 
 .postCardContent h3 {
   background-color: var(--white);
-  padding: var(--size-xxs);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  margin-bottom: var(--size-xxs);
+}
+
+.postCardInfo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  grid-gap: var(--size-xxs);
+}
+
+.postCardInfo div {
+  font-size: 14px;
+  color: var(--medium);
 }
 
 @media (min-width: 768px) {
